--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,17 +21,27 @@ dependencies:
   http: ^1.2.1
   meta: ^1.11.0
   rxdart: ^0.27.7
+  supabase_flutter: ^2.5.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/images/socials/
+
   fonts:
     - family: Rubik
       fonts:
         - asset: assets/fonts/Rubik-Regular.ttf
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
+  min_sdk_android: 21
