--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,6 @@ environment:
 
 dependencies:
   cached_network_image: ^3.3.1
-  dartz: ^0.10.1
   equatable: ^2.0.5
   flutter:
     sdk: flutter
@@ -17,6 +16,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   fpdart: ^1.1.0
   get_it: ^7.7.0
+  google_sign_in: ^6.2.1
   http: ^1.2.1
   rxdart: ^0.27.7
   supabase_flutter: ^2.5.1
