--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,10 @@ environment:
 
 dependencies:
   cached_network_image: ^3.3.1
+  carousel_slider: ^4.2.1
+  dots_indicator: ^3.0.0
   equatable: ^2.0.5
+  expandable_page_view: ^1.0.17
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
@@ -19,6 +22,7 @@ dependencies:
   google_sign_in: ^6.2.1
   http: ^1.2.1
   rxdart: ^0.27.7
+  smooth_page_indicator: ^1.1.0
   supabase_flutter: ^2.5.1
 
 dev_dependencies:
@@ -32,6 +36,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/socials/
+    - assets/images/search/
 
   fonts:
     - family: Rubik
