--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.0
   flutter_launcher_icons: ^0.13.1
+  mockito: ^5.4.4
+  mocktail: ^1.0.3
+  build_runner: ^2.4.9
 
 flutter:
   uses-material-design: true
