--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   cached_network_image: ^3.3.1
   carousel_slider: ^4.2.1
+  cupertino_icons: ^1.0.8
   dots_indicator: ^3.0.0
   equatable: ^2.0.5
   expandable_page_view: ^1.0.17
