--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   get_it: ^7.7.0
   google_sign_in: ^6.2.1
   http: ^1.2.1
+  image_picker: ^1.1.1
   loading_animation_widget: ^1.2.1
   rxdart: ^0.27.7
   smooth_page_indicator: ^1.1.0
