--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.8
   dots_indicator: ^3.0.0
+  dotted_border: ^2.1.0
   equatable: ^2.0.5
   expandable_page_view: ^1.0.17
   flutter:
